# restic-k8s

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  readme.md
example/: backup-job.yml  backup-schedule.yml  config.yml  pvc.yml  restic-secret.env  values.yml  workload.yml
helm/charts/walle/: Chart.yaml  values.yaml
helm/charts/walle/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml
src/: backup_job.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  telemetry.rs
src/crd/: job.rs  mod.rs  schedule.rs  set.rs
src/tasks/: backup.rs  job.rs  mod.rs  schedule.rs  set.rs
tests/: backup_job_tests.rs
tests/common/: mod.rs
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs  retention.rs
