[package]
name = "walle"
version = "0.1.0"
edition = "2021"
default-run = "walle"

[workspace]
members = ["worker"]

[[bin]]
name = "crdgen"
test = false

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest", "schemars"] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
serde_yaml = "0.9.32"
serde = { version = "1.0.196", features = ["derive"] }
schemars = { version = "0.8.16", features = ["chrono"] }
serde_json = "1.0.113"
chrono = { version = "0.4.34", features = ["serde"] }
snafu = { version = "0.8.0", features = ["backtrace", "futures"] }
prometheus = "0.13.3"
opentelemetry = { version = "0.21.0", features = ["trace"] }
tracing-opentelemetry = "0.22.0"
opentelemetry-otlp = "0.14.0"
futures = "0.3.30"
config = "0.14.0"
maplit = "1.0.2"
async-trait = "0.1.77"

[dev-dependencies]
test-context = "0.1.4"
