[package]
name = "walle-worker"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
kube = "0.88.1"
snafu = { version = "0.8.0", features = ["backtrace"] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
